@@ -23,7 +23,7 @@
 10:0.99900642043725868624437550798777108358
 [441, 365]
 0.65054897266021897189117007748600082034 + 0.3797872612825021141546006883142
-4264194*I
+4264193*I
 1.0197948617829165568371172783583479161 + 0.01753787982678033377468853770967
 0993444*x - 0.30423568247445724453438996641387297306*x^2 + O(x^3)
 -1.0000000000000000000000000000000000000*x^-2 + 0.07281584548367672486058637
@@ -332,4 +332,4 @@ zeta(s)*zeta(s-a)
   ***   at top-level: lfunorderzero([errG,[[1,8]~,[1,2]~]])
   ***                 ^-------------------------------------
   *** lfunorderzero: incorrect type in lfunorderzero [vector-valued] (t_VEC).
-Total time spent: 8740
+Total time spent: 5076
