@@ -47,7 +47,7 @@
 4 (lfuntheta): 6.9746847124179912793574557227733860848 E-6
 4 (lfunan): [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
 5 (lfun(2+2*I)): 0.94991647591129072043581963833883739774 + 0.03585105823427
-7443293287918437084238484*I
+7443293287918437084238482*I
 5 (lfun): 1.1100010060250153929372222560595385375
 5 (lfuncreate): 1.1100010060250153929372222560595385375
 5 (lfunderiv): 0.66985260944239582916060974832249875294
@@ -59,7 +59,7 @@
 5 (lfuntheta): 0.015798831739815398531916606977185172990
 5 (lfunan): [1, 0, 0, 0, 1, 0, 1, 1, 0, 0]
 6 (lfun(2+2*I)): 0.96046911396271941245734106936390276916 - 0.19913331853054
-320497393259062063479030*I
+320497393259062063479029*I
 6 (lfun): 1.4401597158776080801495064365138846123
 6 (lfuncreate): 1.4401597158776080801495064365138846123
 6 (lfunderiv): 1.2079049332895341520216765453021425233
@@ -70,8 +70,8 @@
 6 (lfunorderzero): 0
 6 (lfuntheta): 1.1375713725509771962438425200438560299
 6 (lfunan): [1, 1, 0, 1, 0, 0, 2, 1, 2, 0]
-7 (lfun(2+2*I)): 0.88705172216113322480409469919534965612 - 0.09990678085842
-8073943765393502858953796*I
+7 (lfun(2+2*I)): 0.88705172216113322480409469919534965610 - 0.09990678085842
+8073943765393502858953806*I
 7 (lfun): 1.2199870868057000148286320542635728879
 7 (lfuncreate): 1.2199870868057000148286320542635728879
 7 (lfunderiv): 0.76279628494731231763615969761776115935
@@ -83,7 +83,7 @@
 7 (lfuntheta): 0.36149966339864669981432842318357647672
 7 (lfunan): [1, 0, 1, 1, 0, 0, 0, 0, 1, 0]
 8 (lfun(2+2*I)): 1.0101495968934043412732800200854418054 + 0.004609503326023
-2147701632196287121437829*I
+2147701632196287121437638*I
 8 (lfun): 1.0252001241345418724140560939356526952
 8 (lfuncreate): 1.0252001241345418724140560939356526952
 8 (lfunderiv): 0.29024384665957598438544288826949641279
@@ -95,7 +95,7 @@
 8 (lfuntheta): 3.4408766070486585094477767051533947296
 8 (lfunan): [1, 0, 0, 0, 0, 0, 0, 0, 0, 0]
 9 (lfun(2+2*I)): 0.94991647591129072043581963833883739774 + 0.03585105823427
-7443293287918437084238484*I
+7443293287918437084238482*I
 9 (lfun): 1.1100010060250153929372222560595385375
 9 (lfuncreate): 1.1100010060250153929372222560595385375
 9 (lfunderiv): 0.66985260944239582916060974832249875294
@@ -107,7 +107,7 @@
 9 (lfuntheta): 0.015798831739815398531916606977185172990
 9 (lfunan): [1, 0, 0, 0, 1, 0, 1, 1, 0, 0]
 10 (lfun(2+2*I)): 0.96046911396271941245734106936390276916 - 0.1991333185305
-4320497393259062063479030*I
+4320497393259062063479029*I
 10 (lfun): 1.4401597158776080801495064365138846123
 10 (lfuncreate): 1.4401597158776080801495064365138846123
 10 (lfunderiv): 1.2079049332895341520216765453021425233
@@ -119,7 +119,7 @@
 10 (lfuntheta): 1.1375713725509771962438425200438560299
 10 (lfunan): [1, 1, 0, 1, 0, 0, 2, 1, 2, 0]
 11 (lfun(2+2*I)): 1.0101495968934043412732800200854418054 + 0.00460950332602
-32147701632196287121437829*I
+32147701632196287121437638*I
 11 (lfun): 1.0252001241345418724140560939356526952
 11 (lfuncreate): 1.0252001241345418724140560939356526952
 11 (lfunderiv): 0.29024384665957598438544288826949641279
@@ -185,7 +185,7 @@
 12997934085459682226059462*I
 15 (lfunan): [1, I, -I, -1, 0, 1, I, -I, -1, 0]
 16 (lfun(2+2*I)): 0.81260447883761526408104144169608149511 + 0.5144166513337
-4637809100837010866265633*I
+4637809100837010866265632*I
 16 (lfun): 0.54604803621501351833412666043344433859
 16 (lfuncreate): 0.54604803621501351833412666043344433859
 16 (lfunderiv): -0.095957311923813606000713880504095971497
@@ -197,7 +197,7 @@
 16 (lfuntheta): 0.043171973528082749943827357182478083529
 16 (lfunan): [1, -2, -1, 2, 1, 2, -2, 0, -2, -2]
 17 (lfun(2+2*I)): 1.0544108896702584763970017458267826847 - 0.04379652183085
-4397224379011005489686310*I
+4397224379011005489686309*I
 17 (lfun): 0.85415099058271070490531884226581179146
 17 (lfuncreate): 0.85415099058271070490531884226581179146
 17 (lfunderiv): -0.56368025436957145796165019177868545252
@@ -208,8 +208,8 @@
 17 (lfunorderzero): 1
 17 (lfuntheta): 0.84521747322794073828148208807828496968
 17 (lfunan): [1, 0, 0, 0, -3, 0, 3, 0, -3, 0]
-18 (lfun(2+2*I)): 0.98312302696660097223527176346483215206 - 0.1427950673893
-8341065723807966678967160*I
+18 (lfun(2+2*I)): 0.98312302696660097223527176346483215204 - 0.1427950673893
+8341065723807966678967162*I
 18 (lfun): 0.82757526074455562700765359269996549955
 18 (lfuncreate): 0.82757526074455562700765359269996549955
 18 (lfunderiv): -0.87512118124347393325952081941890290949
@@ -221,7 +221,7 @@
 18 (lfuntheta): -7.6688743804622365519219315981408517165
 18 (lfunan): [1, 0, 0, 0, 1, 0, -5, 0, -3, 0]
 19 (lfun(2+2*I)): 0.98627253010480952593175189385314157899 + 0.3801943625589
-2826912755460379882393981*I
+2826912755460379882393982*I
 19 (lfun): 0.66147518792106974272752063397962688979
 19 (lfuncreate): 0.66147518792106974272752063397962688979
 19 (lfunderiv): -0.14384139549317635426356865639499369618
@@ -269,7 +269,7 @@
 22 (lfuntheta): 0.082926332933319155259202716459188391609
 22 (lfunan): [1, 1, 0, 1, 1, 0, 0, 1, 0, 1]
 23 (lfun(2+2*I)): 1.0554498431937466016399059838514723665 - 0.02784638539565
-8970273799631703681748409*I
+8970273799631703681748408*I
 23 (lfun): 0.93316836286939013447125902611036854752
 23 (lfuncreate): 0.93316836286939013447125902611036854752
 23 (lfunderiv): -0.20133842629482530350224118884420836659
@@ -363,7 +363,7 @@
 29 (lfuntheta): 0.43438208556947019708203926615081402208
 29 (lfunan): [2, -2, -2, 0, -2, 6, -2, 0, 4, 4]
 30 (lfun(2+2*I)): 1.0521576652554627042407515608421088843 + 0.14805527106487
-078431325175340697023643*I
+078431325175340697023645*I
 30 (lfun): 0.80975110660967140814479315394793589558
 30 (lfuncreate): 0.80975110660967140814479315394793589558
 30 (lfunderiv): -0.23055349934262096841259422808073776704
@@ -374,8 +374,8 @@
 30 (lfunorderzero): 0
 30 (lfuntheta): 0.25552955884387935277949460024860170847
 30 (lfunan): [1, 0, -2, 0, 0, 0, 6, 0, -3, 0]
-31 (lfun(2+2*I)): 0.89253352046148531026753260212060664880 + 0.3697591309493
-4705287751044283901184889*I
+31 (lfun(2+2*I)): 0.89253352046148531026753260212060664878 + 0.3697591309493
+4705287751044283901184888*I
 31 (lfun): 0.66175089770929725476564677769939622855
 31 (lfuncreate): 0.66175089770929725476564677769939622855
 31 (lfunderiv): -0.10019890783843543927935189577270339065
@@ -391,8 +391,8 @@
 49658092772603273242802490196379732, -0.755928946018454454429033072468360121
 63, 0, -0.66666666666666666666666666666666666667, -0.63245553203367586639977
 870888654370674]
-32 (lfun(2+2*I)): 0.71683178219623482123876107149063323079 - 0.0670150707037
-18642997575342076561776944*I
+32 (lfun(2+2*I)): 0.71683178219623482123876107149063323080 - 0.0670150707037
+18642997575342076561776938*I
 32 (lfun): 0.92706368000081250207056652952022500618 - 0.46364938145483682270
 246750309170364992*I
 32 (lfuncreate): 0.92706368000081250207056652952022500618 - 0.46364938145483
@@ -421,7 +421,7 @@
 33 (lfunorderzero): 0
 33 (lfuntheta): 0.23289067751256198570325301650715050859
 33 (lfunan): [1, 2, -2, 0, -4, -4, -3, 0, 10, -8]
-34 (lfun(2+2*I)): 0.30340585010904366530335696337431398948 - 0.8007738353880
+34 (lfun(2+2*I)): 0.30340585010904366530335696337431398949 - 0.8007738353880
 8323710294579089327329218*I
 34 (lfun): 1.1402308683647332165019665302206510242
 34 (lfuncreate): 1.1402308683647332165019665302206510242
@@ -487,7 +487,7 @@ t_VEC).")
 0339887498948482045868343656381177 + 0.E-38*I, -0.61803398874989484820458683
 436563811772 + 0.E-38*I], [0, 0]]
 37 (lfun(2+2*I)): [1.3483205026938327010553930525605803459 + 0.2078762618774
-5564995113405360074567615*I, 0.93381617574732307362188489901165066822 - 0.27
+5564995113405360074567615*I, 0.93381617574732307362188489901165066821 - 0.27
 699630623555753943003276340006196536*I]
 37 (lfun): [0.80997029123410977860339310872223766187 + 0.2748683812569493376
 9780812234474840637*I, 1.2260985850616064239100198350646394922 - 0.097943275
@@ -545,8 +545,8 @@ t_VEC).")
 38 (lfunorderzero): 0
 38 (lfuntheta): 0.0037418601725423530816919183393838490569
 38 (lfunan): [1, 2, 0, 4, 10, 0, 0, 8, 9, 20]
-39 (lfun(2+2*I)): 0.96988491230440641238657342364061570567 - 0.1643915517658
-5914023446789239531500695*I
+39 (lfun(2+2*I)): 0.96988491230440641238657342364061570565 - 0.1643915517658
+5914023446789239531500694*I
 39 (lfun): 1.2725645584163707364143503829855104713
 39 (lfuncreate): 1.2725645584163707364143503829855104713
 39 (lfunderiv): 0.44714108719078457970225656221901906249
@@ -575,4 +575,4 @@ t_VEC).")
 40 (lfunorderzero): 0
 40 (lfuntheta): 0.00071568351627807464942396068632337922737
 40 (lfunan): [1, 3, 0, 7, 12, 0, 0, 15, 10, 36]
-Total time spent: 4199
+Total time spent: 2504
